# magicraid

./: .gitignore  CLAUDE.md  Cargo.toml
.github/workflows/: ci.yml
diff/: README.md  compare.mjs  jsim.mjs
docs/: 00-core-loop.md  01-design-overview.md  02-speed-combat-spec.md  02-wand-parts-spec.md  03-tech-stack.md  04-demo-roadmap.md  05-b0-migration.md  05-master-backlog.md  07-master-backlog.md  08-demo2-base-editor.md  README.md
harness/: Cargo.toml
harness/src/: lib.rs  main.rs
harness/tests/: base_raid.rs  harness_tests.rs
prototype/: README.md  demo1.html
sim/: Cargo.toml
sim/src/: ai.rs  config.rs  damage.rs  events.rs  grid.rs  lib.rs  movement.rs  roguelite.rs  spells.rs  state.rs  terrain.rs  time_chain.rs
sim/tests/: ai.rs  base.rs  determinism.rs  movement.rs  roguelite.rs  spells.rs  step.rs  terrain.rs
web/: Cargo.toml  README.md  build.sh  smoke.mjs
web/src/: lib.rs
web/www/: index.html  magicraid_web.wasm  main.js
